# hormonesignal-deploy

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
assets/: index-Bt4hzKCg.js  index-CNrJyuPb.js
data/: README.md  download.sh
data/experiments/: README.md  rejected_rich_features_experiment.py
public/results/: latest_run.json
results/: latest_run.json
src/: HormoneSignalBenchDashboard.jsx  main.jsx
tests/: test_export_results.py  test_label_confidence.py  test_metrics.py  test_personalization.py  test_preprocess.py  test_splits.py
whh_bench/: baseline.py  export_results.py  label_confidence.py  metrics.py  personalization.py  preprocess.py  splits.py
whh_bench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
