[project]
name = "whh-bench"
version = "0.1.0"
description = "HormoneSignal Bench — a benchmark for menstrual-phase prediction from wearable signals"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["whh_bench*"]
